@@ -3,6 +3,10 @@
 # Distributed under the GPL v2
 
   11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
+  modules/catalyst/support.py, modules/catalyst/util.py:
+  Move find_binary() from catalyst.support to catalyst.util
+
+  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
   modules/catalyst/arch/__init__.py, +modules/catalyst/output.py,
   modules/catalyst/support.py, modules/catalyst/target/__init__.py,
   modules/catalyst/target/generic_stage.py:
